[tool.poetry]
name = "tskq"
version = "0.1.0"
description = "taskqueue"
authors = ["wangyuhao <waiwyh@gmail.com>"]
packages = [
  { include = "tskq", from = "src" },
]


[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
